--- a/webFiles/index.html
+++ b/webFiles/index.html
@@ -1,2 +1,11 @@
+<!doctype html>
+<head>
+    <title>Test homepage</title>
+    <meta charset="utf-8" /> 
+</head>
+
+<body>
 <h1>henlo, it me the test home page</h1>
-<a href="test2.html">test2 page</a>
+<a href="sqlTest.html">SQL test page</a>
+</body>
+</html>
