More work on data reading&writing

--- a/webFiles/index.html
+++ b/webFiles/index.html
@@ -1,11 +1,18 @@
 <!doctype html>
 <head>
     <title>Test homepage</title>
-    <meta charset="utf-8" /> 
+    <meta charset="utf-8" />
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/alasql.min.js"></script>
+    <!-- <script src="js/getNews.js"></script>
+    <script src="js/newsScroller.js"></script> -->
+    <script src="js/getTiles.js"></script>
+    <script src="js/outclick.js"></script>
 </head>
 
 <body>
-<h1>henlo, it me the test home page</h1>
-<a href="sqlTest.html">SQL test page</a>
+<h1>Beta homepage</h1>
+<div id="news">Loading news.</div>
+<div id="tiles"></div>
 </body>
 </html>
