--- a/static/index.html
+++ b/static/index.html
@@ -2,17 +2,17 @@
 <head>
     <title>Test homepage</title>
     <meta charset="utf-8" />
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/alasql.min.js"></script>
-    <!-- <script src="js/getNews.js"></script>
-    <script src="js/newsScroller.js"></script> -->
+    <script src="js/getNews.js"></script>
     <script src="js/getTiles.js"></script>
+    <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/newsScroller.js"></script>
     <script src="js/outclick.js"></script>
 </head>
 
 <body>
-<h1>Beta homepage</h1>
 <div id="news">Loading news.</div>
+<div id="clock"></div>
+<div id="settings"></div>
 <div id="tiles"></div>
 </body>
 </html>
